--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
     --btn-color: #4D5AE5;
     --logo-color: #2E2F42;
     --btn-bacground-color: #F4F4FD;
+    --footer-text-color: #E7E9FC;
 }
 
 body {
@@ -30,6 +31,11 @@ body {
     margin: 0;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
 p {
     margin-top: 0;
     margin-bottom: 0;
@@ -54,21 +60,26 @@ p {
     width: 1158px;
     padding-right: 15px;
     padding-left: 15px;
+    padding-bottom: 120px;
+    padding-top: 120px;
     /* outline: 2px solid tomato; */
 }
 
 /* site nav */
-.nav-addres {
-    border: 1px solid #E7E9FC;
+header {
+    border-bottom: 1px solid #E7E9FC;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .main-nav {
     display: flex;
    justify-content: space-between;
 }
-.nav-addres .container {
-    padding-top: 24px ;
-    padding-bottom: 24px ;
+.container.main-nav{
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
+
 .site-nav {
     display: flex;
 }
@@ -86,6 +97,8 @@ p {
     font-size: 16px;
     line-height: 1.5;
     text-decoration: none;
+    padding-top:24px ;
+    padding-bottom: 24px;
    }
 .site-nav .link.current{
     color: var(--btn-color);
@@ -118,9 +131,14 @@ color: var(--active-color);
 /* hero */
 .hero {
 text-align: center;
-margin-bottom: 120px;
+padding-top: 188px;
+padding-bottom: 188px;
+background-color: var(--title-text-color);
 }
 .hero-title {
+    width: 494px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top:0 ;
     margin-bottom: 48px;
     color:var(--primery-bg-color) ;
@@ -146,6 +164,7 @@ margin-bottom: 120px;
     height: 56px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border: none;
 }
 
 .button-index:hover,
@@ -163,10 +182,7 @@ background-color: var(--active-color);
     text-transform: capitalize;
 }
 /* features */
-.container.features,
-.container.doing {
-margin-bottom: 120px;
-}
+
 .feature-list .title,
 .team-list .title {
     margin-top: 0;
@@ -190,12 +206,11 @@ line-height: 1.2;
     display: flex;
     justify-content: space-between;
 }
+.container.doing {
+    padding-top: 0px;
+}
 
 /* team */
-.container.team {
-    padding-top: 120px ;
-    padding-bottom: 120px;
-}
 .team-list {
     display: flex;
     justify-content: space-between;
@@ -209,24 +224,33 @@ line-height: 1.2;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 0px;
         gap: 8px;
-       margin: 32px 16px;
+       padding: 32px 16px;
 }
 
 
 /* footer */
-.container.footer {
+footer {
     padding-top: 100px;
     padding-bottom: 100px;
+    background-color: var(--title-text-color);
+}
+.container.footer {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+.footer-logo {
+    margin-bottom: 16px;
+}
+.footer-logo .logosecond{
+color: var(--btn-bacground-color);
 }
 .footer-discription{
     max-width: 264px;
+    color:var(--footer-text-color);
 }
 /* portfolio  */
-.container.portfolio{
-    margin-bottom: 120px;
-}
+
 .btn-portfolio {
     background-color: var(--btn-bacground-color);
     color: var(--btn-color);
@@ -242,7 +266,7 @@ line-height: 1.2;
     cursor: pointer;
     height: 48px;
     border: 1px solid #E7E9FC;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
     border-radius: 4px;
     padding: 12px 24px;
 }
@@ -264,10 +288,12 @@ line-height: 1.2;
     color: var(--title-text-color);
     text-decoration: none;
 }
+.container.portfolio{
+    padding-top:96px;
+}
 .list.buttons{
     display: flex;
-    justify-content: center;
-    margin-top: 96px;
+    justify-content: center;  
     margin-bottom: 72px;
 }
 .list.buttons .item + .item{
@@ -295,18 +321,13 @@ line-height: 1.2;
     border-left:1px solid #E7E9FC ;
     border-right:1px solid #E7E9FC ;
     border-bottom:1px solid #E7E9FC ;
-       display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding: 32px 16px;
-        gap: 8px;
-}
+    padding: 32px 16px;
+ }
 .list.apps .item:hover,
 .list.apps .item:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .apps .title-item {
     margin-top: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 8px;
 }
